force-app/main/default/objects/Billing_Territory__c/Billing_Territory__c.object-meta.xml
<CustomObject>
    <label>Billing Territory</label>
    <nameField>
        <label>Billing Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>