force-app/main/default/objects/Billing_Territory__c/fields/Destruction_Target_May__c.field-meta.xml
<CustomField>
    <fullName>Destruction_Target_May__c</fullName>
    <label>Destruction Target May</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>