force-app/main/default/objects/Billing_Territory__c/fields/Inbound_Target_Oct__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Target_Oct__c</fullName>
    <label>Inbound Target Oct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>