force-app/main/default/objects/Billing_Territory__c/fields/PUMV_Target_Aug__c.field-meta.xml
<CustomField>
    <fullName>PUMV_Target_Aug__c</fullName>
    <label>PUMV Target Aug</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>