force-app/main/default/objects/Billing_Territory__c/fields/PW_Target_Jan__c.field-meta.xml
<CustomField>
    <fullName>PW_Target_Jan__c</fullName>
    <label>PW Target Jan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>