force-app/main/default/objects/Billing_Territory__c/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territories1</relationshipName>
    <type>Lookup</type>
</CustomField>