force-app/main/default/objects/Billing_Territory__c/fields/TGM__c.field-meta.xml
<CustomField>
    <fullName>TGM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TGM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territories</relationshipName>
    <type>Lookup</type>
</CustomField>