force-app/main/default/objects/Billing_Territory__c/fields/YTD_Target_PUMV__c.field-meta.xml
<CustomField>
    <fullName>YTD_Target_PUMV__c</fullName>
    <formula>Case(YTD_End_Period__c, 
1, PUMV_Target_Jan__c, 
2, PUMV_Target_Jan__c + PUMV_Target_Feb__c, 
3, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c, 
4, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c, 
5, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c, 
6, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c + PUMV_Target_June__c, 
7, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c + PUMV_Target_June__c + PUMV_Target_July__c, 
8, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c + PUMV_Target_June__c + PUMV_Target_July__c + PUMV_Target_Aug__c, 
9, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c + PUMV_Target_June__c + PUMV_Target_July__c + PUMV_Target_Aug__c + PUMV_Target_Sept__c, 
10, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c + PUMV_Target_June__c + PUMV_Target_July__c + PUMV_Target_Aug__c + PUMV_Target_Sept__c + PUMV_Target_Oct__c, 
11, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c + PUMV_Target_June__c + PUMV_Target_July__c + PUMV_Target_Aug__c + PUMV_Target_Sept__c + PUMV_Target_Oct__c + PUMV_Target_Nov__c, 
12, PUMV_Target_Jan__c + PUMV_Target_Feb__c + PUMV_Target_Mar__c + PUMV_Target_Apr__c + PUMV_Target_May__c + PUMV_Target_June__c + PUMV_Target_July__c + PUMV_Target_Aug__c + PUMV_Target_Sept__c + PUMV_Target_Oct__c + PUMV_Target_Nov__c + PUMV_Target_Dec__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Target PUMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>