force-app/main/default/objects/Billing_Territory__c/fields/YTD_Target_PW__c.field-meta.xml
<CustomField>
    <fullName>YTD_Target_PW__c</fullName>
    <formula>Case(YTD_End_Period__c, 
1, PW_Target_Jan__c, 
2, PW_Target_Jan__c + PW_Target_Feb__c, 
3, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c, 
4, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c, 
5, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c, 
6, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c + PW_Target_June__c, 
7, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c + PW_Target_June__c + PW_Target_July__c, 
8, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c + PW_Target_June__c + PW_Target_July__c + PW_Target_Aug__c, 
9, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c + PW_Target_June__c + PW_Target_July__c + PW_Target_Aug__c + PW_Target_Sept__c, 
10, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c + PW_Target_June__c + PW_Target_July__c + PW_Target_Aug__c + PW_Target_Sept__c + PW_Target_Oct__c, 
11, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c + PW_Target_June__c + PW_Target_July__c + PW_Target_Aug__c + PW_Target_Sept__c + PW_Target_Oct__c + PW_Target_Nov__c, 
12, PW_Target_Jan__c + PW_Target_Feb__c + PW_Target_Mar__c + PW_Target_Apr__c + PW_Target_May__c + PW_Target_June__c + PW_Target_July__c + PW_Target_Aug__c + PW_Target_Sept__c + PW_Target_Oct__c + PW_Target_Nov__c + PW_Target_Dec__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Target PW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>