force-app/main/default/objects/Billing_Territory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>TGM__c</columns>
    <columns>SVP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>